...
      </View>
      <View style={[{ flexGrow: 1, justifyContent: 'flex-end' }]}>
        <EnterTestWalletButton />
        <View style={[{ padding: 16 }]}>
          <TextArea
            autoFocus
            btnPrimaryText={'Sign in'}
            btnSecondaryText={'Cancel'}
            onBtnSecondary={onBack}
            onChangeText={() => setErrorMessage(undefined)}
            errorMessage={errorMessage}
            onBtnPrimary={onEnterWallet}
            autoCorrect={false}
...
