...
      data={tokenItems}
      renderItem={info => renderItem(info.item)}
      keyExtractor={item => item.id}
    />
  );

  const collectiblesRoute = () => <TextTitle text={'Collectibles'} />;

  const renderScene = SceneMap({
    Tokens: tokensRoute,
    Collectibles: collectiblesRoute,
  });

...
